# python-template

./: .copierignore  .gitignore  .pre-commit-config.yaml.jinja  LICENSE  Makefile  README.ja.md.jinja  README.md  README.md.jinja  cookiecutter.json  copier.yml  pyproject.toml  pyproject.toml.jinja
.github/workflows/: lint.yml.jinja
dev/: test_copier.sh
{{ cookiecutter.package_name if cookiecutter is defined else package_name }}/: agent.py.jinja  config.py.jinja  main.py.jinja
