[project]
name = "python-template"
version = "0.1.0"
description = "Copier template for a minimal agent app"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]


[tool.uv]
package = false

[dependency-groups]
dev = ["ruff==0.6.0", "poethepoet>=0.25", "pre-commit>=3.7,<4"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.poe.tasks.lint]
shell = "ruff check ${PY_SRCS:-.} && ruff format --check ${PY_SRCS:-.}"

[tool.poe.tasks.format]
shell = "ruff format ${PY_SRCS:-.}"

[tool.poe.tasks.fix]
shell = "ruff check ${PY_SRCS:-.} --fix && ruff format ${PY_SRCS:-.}"

[tool.poe.tasks.precommit-install]
shell = "pre-commit install"

[tool.poe.tasks.precommit]
shell = "pre-commit run --all-files"
